Added course records section

--- a/buggy.html
+++ b/buggy.html
@@ -330,6 +330,65 @@
         </p>
       </div>
 
+      <!-- Current Men's Record -->
+      <div class="display-record">
+        <p class="time-year">
+          2.02.16 (2017)
+        </p>
+        <p class="record-team-name">SDC Men's A</p>
+
+        <iframe
+          src="https://www.youtube.com/embed/j0TpeSgX4u0" title="YouTube video player" 
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen 
+          class="record-video">
+        </iframe>
+      </div>
+
+      <!-- Current Women's Record -->
+      <div class="display-record">
+        <p class="time-year">
+          2.23.17 (2017)
+        </p>
+        <p class="record-team-name">SDC Women's A</p>
+
+        <iframe 
+          src="https://www.youtube.com/embed/dWUCxPETO4s" title="YouTube video player" 
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen
+          class="record-video">
+        </iframe>
+      </div>
+
+      <!-- Autonomous Course Record -->
+      <div class="display-record">
+        <p class="time-year">
+          3.09.70 (2023)
+        </p>
+        <p class="record-team-name">Robobuggy</p>
+
+        <iframe src="https://www.youtube.com/embed/M6-GWQi8Pbo" title="YouTube video player" 
+          frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen
+          class="record-video">
+        </iframe>
+      </div>
+
+      <!-- SPIRIT 20-year Record -->
+      <div class="display-record">
+        <p class="time-year">
+          2.06.20 (1988)
+        </p>
+        <p class="record-team-name">SPIRIT Racing Systems 20-Year Record</p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/fusPcwBqxOk" 
+          title="YouTube video player" frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen
+          class="record-video">
+        </iframe>
+      </div>
+
       <!-- ---------------------------------------------------------------------------------------------------------------------------- -->
       <!-- Back Hills: Leaderboard -->
       <div class="begin-section" id="back-hills">
