fixed div issue

--- a/buggy.html
+++ b/buggy.html
@@ -183,7 +183,7 @@
           class="team-photo">
         
         <!-- DG Buggy -->
-        <div class="img-and-caption">
+        <div class="img-and-caption" id="dg-feature">
           <img src="./assets/team logos/dg-racing.png"
             alt="A black rectangle with a red parallelogram superimposed on it. 'DEEGEE' is written on the parallelogram with a black and white checkerboard pattern, and the word 'Racing' is superimposed in a handwriting-like font"
             class="team-logo">
