Finished adding in page content

--- a/buggy.html
+++ b/buggy.html
@@ -48,6 +48,130 @@
           So What is this Buggy Thing Anyway?
         </p>
       </div>
+
+      <div class="info-template">
+     
+        <div class="info-content">
+          <!-- General Info -->
+          <div class="info-title-img">
+            <p class="info-title">
+              Buggy: An Explanation
+            </p>
+
+            <img src="./assets/spirit-2018-hill1.JPG"
+              alt="Two men in light blue shirts side by side on a street. The man on the left is pushing a buggy (a small torpedo shaped vehicle with a handle on the back), while the man on the right runs along side him."
+              class="info-img">
+          </div>
+
+          <p class="description-txt">
+            Buggy (also called Sweepstakes) is a race held annually since 1920 at Carnegie Mellon. Teams of five athletes (the pushers) push an un-motorized vehicle (a buggy) containing a driver around a 0.84 mile course in a relay format where the vehicle serves as the baton. Roughly half of the course is uphill, during which the pushers run and shove the buggy uphill. During the other – downhill – half, drivers are on their own to navigate tight turns at speeds of up to 35mph.
+          </p>
+
+          <!-- Raceday 2022: SPIRIT A and CIA D Raceday Video. Source: https://www.youtube.com/watch?v=KUYhK4IDVVg from CMUBuggy -->
+          <iframe 
+            src="https://www.youtube.com/embed/KUYhK4IDVVg" title="YouTube video player" 
+            frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            allowfullscreen id="raceday-video">
+          </iframe>
+
+          <!-- Course Section Images -->
+          <!-- Hill 1 -->
+          <div class="info-title-img">
+            <p class="info-title">
+              Hill 1
+            </p>
+
+            <!-- Image Credit: Guillermo Gomez -->
+            <img src="./assets/course-photos/hill1.jpg"
+              alt="Student in teal shirt pushing a pink buggy up a road while another student in front runs towards her"
+              class="info-img">
+          </div>
+
+          <!-- Hill 2 -->
+          <div class="info-title-img">
+            <p class="info-title">
+              Hill 2
+            </p>
+
+            <!-- Image from BAA-->
+            <img src="./assets/course-photos/hill2.jpg"
+              alt="Two men in light blue shirts side by side on a street. The man on the left is pushing a buggy (a small torpedo shaped vehicle with a handle on the back), while the man on the right runs along side him."
+              class="info-img">
+          </div>
+
+          <!-- Free Roll -->
+          <div class="info-title-img">
+            <p class="info-title">
+              Free Roll
+            </p>
+
+            <img src="./assets/spirit-2018-hill1.JPG"
+              alt="Two men in light blue shirts side by side on a street. The man on the left is pushing a buggy (a small torpedo shaped vehicle with a handle on the back), while the man on the right runs along side him."
+              class="info-img">
+          </div>
+
+          <!-- Schenley Dr. -->
+          <div class="info-title-img">
+            <p class="info-title">
+              Schenley Dr.
+            </p>
+
+            <!-- Image Credit: Lou Conley -->
+            <img src="./assets/course-photos/schenley.jpg"
+              alt="Two men in light blue shirts side by side on a street. The man on the left is pushing a buggy (a small torpedo shaped vehicle with a handle on the back), while the man on the right runs along side him."
+              class="info-img">
+          </div>
+
+          <!-- The Chute -->
+          <div class="info-title-img">
+            <p class="info-title">
+              "The Chute"
+            </p>
+
+            <!-- Image Credit: Guillermo Gomez -->
+            <img src="./assets/course-photos/chute.jpg"
+              alt="Two men in light blue shirts side by side on a street. The man on the left is pushing a buggy (a small torpedo shaped vehicle with a handle on the back), while the man on the right runs along side him."
+              class="info-img">
+          </div>
+
+          <!-- Hill 3 -->
+          <div class="info-title-img">
+            <p class="info-title">
+              Hill 3
+            </p>
+
+            <!-- Image Credit: Declan Kelly -->
+            <img src="./assets/course-photos/hill3.jpg"
+              alt="Two men in light blue shirts side by side on a street. The man on the left is pushing a buggy (a small torpedo shaped vehicle with a handle on the back), while the man on the right runs along side him."
+              class="info-img">
+          </div>
+
+          <!-- Hill 4 -->
+          <div class="info-title-img">
+            <p class="info-title">
+              Hill 4
+            </p>
+
+            <!-- Image Credit: Guillermo Gomez -->
+            <img src="./assets/course-photos/hill4.jpg"
+              alt="Two men in light blue shirts side by side on a street. The man on the left is pushing a buggy (a small torpedo shaped vehicle with a handle on the back), while the man on the right runs along side him."
+              class="info-img">
+          </div>
+
+          <!-- Hill 5 -->
+          <div class="info-title-img">
+            <p class="info-title">
+              Hill 5
+            </p>
+
+            <!-- Image Credit: Damien Rudzinski -->
+            <img src="./assets/course-photos/hill5.jpg"
+              alt="Two men in light blue shirts side by side on a street. The man on the left is pushing a buggy (a small torpedo shaped vehicle with a handle on the back), while the man on the right runs along side him."
+              class="info-img">
+          </div>
+        </div>
+
+      </div>
     
     <!-- ---------------------------------------------------------------------------------------------------------------------------- -->
     <!-- Free Roll Section: Featured Buggies -->
