Added another image, need to update alt text

--- a/buggy.html
+++ b/buggy.html
@@ -75,6 +75,7 @@
           </iframe>
 
           <!-- Course Section Images -->
+          <!-- To Do: Fix All Alt-Text -->
           <!-- Hill 1 -->
           <div class="info-title-img">
             <p class="info-title">
@@ -105,7 +106,7 @@
               Free Roll
             </p>
 
-            <img src="./assets/spirit-2018-hill1.JPG"
+            <img src="./assets/course-photos/freeroll.jpg"
               alt="Two men in light blue shirts side by side on a street. The man on the left is pushing a buggy (a small torpedo shaped vehicle with a handle on the back), while the man on the right runs along side him."
               class="info-img">
           </div>
