Added image credit to free roll as a comment

--- a/buggy.html
+++ b/buggy.html
@@ -106,6 +106,7 @@
               Free Roll
             </p>
 
+            <!-- Image Source: https://www.cmu.edu/news/stories/archives/2021/april/buggy.html -->
             <img src="./assets/course-photos/freeroll.jpg"
               alt="Two men in light blue shirts side by side on a street. The man on the left is pushing a buggy (a small torpedo shaped vehicle with a handle on the back), while the man on the right runs along side him."
               class="info-img">
