Implemented Progress Bar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="vertical-navigation-bar">
         <!-- Sweepstakes Logo Source: https://cmubuggy.org/history/sweepstakes -->
         <img src="./assets/sweepstakes_logo_notext.svg"
-          alt="Buggy Sweepstakes Logo: a top-view of a buggy with elements of Carnegie Mellon's Thistle logo incorporated"
+          alt="Black buggy with white lines crossing over it. Two simplified thistle leaves are on the left and right "
           id="sweepstakes-logo">
         
         <!-- Info Icon Source: https://commons.wikimedia.org/wiki/File:Infobox_info_icon.svg -->
