Most Interactions Are Working

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
           </a>
 
-          <a href="./buggy.html#free-roll">
+          <a href="./buggy.html#free-roll-title">
             <div class="checkpoint-marker" id="marker-two">
               <p class="marker-txt">2</p>
             </div>
