Updated Button and Begin-Section Styles

--- a/buggy.html
+++ b/buggy.html
@@ -9,7 +9,7 @@
   <!-- Linking to JQuery API -->
   <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-  <script type="module" src="./js/navigation.js"></script>
+  <!-- <script type="module" src="./js/navigation.js"></script> -->
   <script type="module" src="./js/buggy.js"></script>
   <title>Document</title>
 </head>
