--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <title>Buggy Information Website</title>
   </head>
 
-  <body>
+  <body id="home-page">
     <div id="navigation-page">
       <nav class="vertical-navigation-bar">
         <!-- Sweepstakes Logo Source: https://cmubuggy.org/history/sweepstakes -->
         <img src="./assets/sweepstakes_logo_notext.svg"
-          alt="Black buggy with white lines crossing over it. Two simplified thistle leaves are on the left and right "
+          alt="Black buggy with white lines. Two leaves are drawn on the left and right "
           id="sweepstakes-logo">
         
         <!-- Info Icon Source: https://commons.wikimedia.org/wiki/File:Infobox_info_icon.svg -->
@@ -33,11 +33,12 @@
             Or click<span class="bold-txt"> the circles </span>to jump to a specific part of the course!
           </p>
         </div>
+
         <div class="start-course">
-          <h1 class="ready-set-go">READY...</h1>
-          <h1 class="ready-set-go">SET...</h1>
+          <p class="ready-set-go">READY...</h1>
+          <p class="ready-set-go">SET...</h1>
           <a href="./buggy.html" class="button">
-            <h1 class="ready-set-go" id="go-button">GO!</h1>
+            <p class="ready-set-go" id="go-button">GO!</h1>
           </a>
         </div>
       </nav>
