Updated Go Button Link Styles

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="start-course">
           <p class="ready-set-go">READY...</h1>
           <p class="ready-set-go">SET...</h1>
-          <a href="./buggy.html" class="button">
+          <a href="./buggy.html" class="nav-button">
             <p class="ready-set-go" id="go-button">GO!</h1>
           </a>
         </div>
