--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         </div>
 
         <div class="start-course">
-          <p class="ready-set-go">READY...</h1>
-          <p class="ready-set-go">SET...</h1>
+          <h1 class="ready-set-go">READY...</h1>
+          <h1 class="ready-set-go">SET...</h1>
           <a href="./buggy.html" class="nav-button">
-            <p class="ready-set-go" id="go-button">GO!</h1>
+            <h1 class="ready-set-go" id="go-button">GO!</h1>
           </a>
         </div>
       </nav>
