Made Website Accessible

--- a/buggy.html
+++ b/buggy.html
@@ -36,12 +36,12 @@
     <!-- Text and Stats are sourced from the Buggy Alumni Association (cmubuggy.org) unless otherwise stated -->
     <div class="display-content">
         <div class="begin-section" id="front-hills">
-          <p class="section-title" id="front-hill-title">
+          <h1 class="section-title" id="front-hill-title">
             Front Hills
-          </p>
-          <p class="section-subtitle">
+          </h1>
+          <h2 class="section-subtitle">
             So What is this Buggy Thing Anyway?
-          </p>
+          </h2>
         </div>
 
         <div class="info-template">
@@ -72,9 +72,9 @@
             <!-- Course Section Images -->
             <!-- Hill 1 -->
             <div class="info-title-img">
-              <p class="info-title">
+              <h3 class="info-title">
                 Hill 1
-              </p>
+              </h3>
 
               <!-- Image Credit: Guillermo Gomez -->
               <img src="./assets/course-photos/hill1.jpg"
@@ -84,9 +84,9 @@
 
             <!-- Hill 2 -->
             <div class="info-title-img">
-              <p class="info-title">
+              <h3 class="info-title">
                 Hill 2
-              </p>
+              </h3>
 
               <!-- Image from BAA-->
               <img src="./assets/course-photos/hill2.jpg"
@@ -96,9 +96,9 @@
 
             <!-- Free Roll -->
             <div class="info-title-img">
-              <p class="info-title">
+              <h3 class="info-title">
                 Free Roll
-              </p>
+              </h3>
 
               <!-- Image Source: https://www.cmu.edu/news/stories/archives/2021/april/buggy.html -->
               <img src="./assets/course-photos/freeroll.jpg"
@@ -108,9 +108,9 @@
 
             <!-- Schenley Dr. -->
             <div class="info-title-img">
-              <p class="info-title">
+              <h3 class="info-title">
                 Schenley Dr.
-              </p>
+              </h3>
 
               <!-- Image Credit: Lou Conley -->
               <img src="./assets/course-photos/schenley.jpg"
@@ -120,9 +120,9 @@
 
             <!-- The Chute -->
             <div class="info-title-img">
-              <p class="info-title">
+              <h3 class="info-title">
                 "The Chute"
-              </p>
+              </h3>
 
               <!-- Image Credit: Guillermo Gomez -->
               <img src="./assets/course-photos/chute.jpg"
@@ -132,9 +132,9 @@
 
             <!-- Hill 3 -->
             <div class="info-title-img">
-              <p class="info-title">
+              <h3 class="info-title">
                 Hill 3
-              </p>
+              </h3>
 
               <!-- Image Credit: Declan Kelly -->
               <img src="./assets/course-photos/hill3.jpg"
@@ -144,9 +144,9 @@
 
             <!-- Hill 4 -->
             <div class="info-title-img">
-              <p class="info-title">
+              <h3 class="info-title">
                 Hill 4
-              </p>
+              </h3>
 
               <!-- Image Credit: Guillermo Gomez -->
               <img src="./assets/course-photos/hill4.jpg"
@@ -156,9 +156,9 @@
 
             <!-- Hill 5 -->
             <div class="info-title-img">
-              <p class="info-title">
+              <h3 class="info-title">
                 Hill 5
-              </p>
+              </h3>
 
               <!-- Image Credit: Damien Rudzinski -->
               <img src="./assets/course-photos/hill5.jpg"
@@ -172,12 +172,12 @@
     <!-- ---------------------------------------------------------------------------------------------------------------------------- -->
     <!-- Free Roll Section: Featured Buggies -->
       <div class="begin-section" id="free-roll">
-        <p class="section-title" id="free-roll-title">
+        <h1 class="section-title" id="free-roll-title">
           Free Roll
-        </p>
-        <p class="section-subtitle">
+        </h1>
+        <h2 class="section-subtitle">
           A Selection of Historically Notable Buggies
-        </p>
+        </h2>
       </div>
 
       <div class="info-content">
@@ -240,12 +240,12 @@
       <!-- ---------------------------------------------------------------------------------------------------------------------------- -->
       <!-- Schenley Section: Current Teams -->
       <div class="begin-section" id="schenley">
-        <p class="section-title" id="schenley-title">
+        <h1 class="section-title" id="schenley-title">
           Schenley Dr.
-        </p>
-        <p class="section-subtitle">
+        </h1>
+        <h2 class="section-subtitle">
           Currently Active Buggy Teams
-        </p>
+        </h2>
       </div>
 
       <!-- Showcase Active Teams, Includes Link to their Website and a Team Photo -->
@@ -256,7 +256,7 @@
             <img src="./assets/team logos/apex.svg"
               alt="The word 'Apex' in a large red stencil font."
               class="team-logo">
-            <p class="team-name">Apex Buggy</p>
+            <h3 class="team-name">Apex Buggy</h3>
             <p class="img-caption">Founded: 2011</p>
             <a href="https://tartanconnect.cmu.edu/apex/home/">
               <button class="visit-team">Visit Their Website!</button>
@@ -275,7 +275,7 @@
             <img src="./assets/team logos/atlas.jpg"
               alt="White buggy in a black hatched circle."
               class="team-logo">
-            <p class="team-name">Atlas</p>
+            <h3 class="team-name">Atlas</h3>
             <p class="img-caption">Founded: 2015</p>
             <a href="https://atlasbuggy.github.io/">
               <button class="visit-team">Visit Their Website!</button>
@@ -294,7 +294,7 @@
             <img src="./assets/team logos/cia2022.png"
               alt="The letters CIA in black, distorted to be shaped like a buggy."
               class="team-logo">
-            <p class="team-name">Carnegie Involvement Association (CIA)</p>
+            <h3 class="team-name">Carnegie Involvement Association (CIA)</h3>
             <p class="img-caption">Founded: 1970</p>
             <a href="http://ciabuggy.org/">
               <button class="visit-team">Visit Their Website!</button>
@@ -313,7 +313,7 @@
             <img src="./assets/team logos/dg-racing.png"
               alt="'DEEGEE' is written on a red parallelogram with a checkerboard pattern."
               class="team-logo">
-            <p class="team-name">Delta Gamma Racing (DG)</p>
+            <h3 class="team-name">Delta Gamma Racing (DG)</h3>
             <p class="img-caption">Founded: 2022</p>
             <a href="https://cmu.deltagamma.org/">
               <button class="visit-team">Visit Their Website!</button>
@@ -332,7 +332,7 @@
             <img src="./assets/team logos/fringe.svg"
               alt="A yellow drawing of a man arm extended next to the words 'Fringe Racing.'"
               class="team-logo">
-            <p class="team-name">Fringe</p>
+            <h3 class="team-name">Fringe</h3>
             <p class="img-caption">Founded: 1969</p>
             <a href="http://fringe.org/">
               <button class="visit-team">Visit Their Website!</button>
@@ -351,7 +351,7 @@
             <img src="./assets/team logos/pikaracing.png"
               alt="The words 'PIKA Racing' in black. The letters in 'PIKA' look slashed."
               class="team-logo">
-            <p class="team-name">Pi Kappa Alpha</p>
+            <h3 class="team-name">Pi Kappa Alpha</h3>
             <p class="img-caption">Founded: 1921</p>
             <a href="https://cmupikes.org/pika-buggy">
               <button class="visit-team">Visit Their Website!</button>
@@ -370,7 +370,7 @@
             <img src="./assets/team logos/robobuggy.svg"
               alt="Red lines with that meet a topdown drawing of a buggy"
               class="team-logo">
-            <p class="team-name">Robobuggy</p>
+            <h3 class="team-name">Robobuggy</h3>
             <p class="img-caption">Founded: 2000</p>
             <a href="https://roboticsclub.org/projects/robobuggy/">
               <button class="visit-team">Visit Their Website!</button>
@@ -389,7 +389,7 @@
             <img src="./assets/team logos/sdc.svg"
               alt="The words 'SDC Buggy' inside a line drawing of a buggy"
               class="team-logo">
-            <p class="team-name">Student Dormitory Council (SDC)</p>
+            <h3 class="team-name">Student Dormitory Council (SDC)</h3>
             <p class="img-caption">Founded: 1974</p>
             <a href="http://sdcbuggy.org/">
               <button class="visit-team">Visit Their Website!</button>
@@ -408,7 +408,7 @@
             <img src="./assets/team logos/sigepracing.webp"
               alt="The words 'SIGEP RACING' next to three angle brackets colored red, purple, and yellow."
               class="team-logo">
-            <p class="team-name">Sigma Phi Epsilon</p>
+            <h3 class="team-name">Sigma Phi Epsilon</h3>
             <p class="img-caption">Founded: 1998</p>
             <a href="https://www.sigep.fun/">
               <button class="visit-team">Visit Their Website!</button>
@@ -427,7 +427,7 @@
             <img src="./assets/team logos/signu.svg"
               alt="The words 'Sigma Nu,' 'esp,' and 'Racing' in black arranged in three vertically stacked rectangles."
               class="team-logo">
-            <p class="team-name">Sigma Nu</p>
+            <h3 class="team-name">Sigma Nu</h3>
             <p class="img-caption">Founded: 1916</p>
             <a href="https://www.instagram.com/sigmanucmu/?hl=en">
               <button class="visit-team">Visit Their Website!</button>
@@ -446,7 +446,7 @@
             <img src="./assets/team logos/spirit.png"
               alt="Symbol of Hysteresis inside a compass. To the right are the words 'SPIRIT Racing Systems.'"
               class="team-logo">
-            <p class="team-name">SPIRIT Racing Systems</p>
+            <h3 class="team-name">SPIRIT Racing Systems</h3>
             <p class="img-caption">Founded: 1985</p>
             <a href="https://www.spiritracingsystems.com/">
               <button class="visit-team">Visit Their Website!</button>
@@ -463,20 +463,20 @@
       <!-- ---------------------------------------------------------------------------------------------------------------------------- -->
       <!-- Chute Section: Notable Records -->
       <div class="begin-section" id="chute">
-        <p class="section-title" id="chute-title">
+        <h1 class="section-title" id="chute-title">
           The Chute
-        </p>
-        <p class="section-subtitle">
+        </h1>
+        <h2 class="section-subtitle">
           Notable Records in Buggy History
-        </p>
+        </h2>
       </div>
 
       <!-- Current Men's Record -->
       <div class="display-record">
-        <p class="time-year">
+        <h3 class="time-year">
           2.02.16 (2017)
-        </p>
-        <p class="record-team-name">SDC Men's A</p>
+        </h3>
+        <h4 class="record-team-name">SDC Men's A</h4>
 
         <iframe
           src="https://www.youtube.com/embed/j0TpeSgX4u0" title="YouTube video player" 
@@ -488,10 +488,10 @@
 
       <!-- Current Women's Record -->
       <div class="display-record">
-        <p class="time-year">
+        <h3 class="time-year">
           2.23.17 (2017)
-        </p>
-        <p class="record-team-name">SDC Women's A</p>
+        </h3>
+        <h4 class="record-team-name">SDC Women's A</h4>
 
         <iframe 
           src="https://www.youtube.com/embed/dWUCxPETO4s" title="YouTube video player" 
@@ -503,10 +503,10 @@
 
       <!-- Autonomous Course Record -->
       <div class="display-record">
-        <p class="time-year">
+        <h3 class="time-year">
           3.09.70 (2023)
-        </p>
-        <p class="record-team-name">Robobuggy</p>
+        </h3>
+        <h4 class="record-team-name">Robobuggy</h4>
 
         <iframe src="https://www.youtube.com/embed/M6-GWQi8Pbo" title="YouTube video player" 
           frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
@@ -517,10 +517,10 @@
 
       <!-- SPIRIT 20-year Record -->
       <div class="display-record">
-        <p class="time-year">
+        <h3 class="time-year">
           2.06.20 (1988)
-        </p>
-        <p class="record-team-name">SPIRIT Racing Systems 20-Year Record</p>
+        </h3>
+        <h4 class="record-team-name">SPIRIT Racing Systems 20-Year Record</h4>
 
         <iframe width="560" height="315" src="https://www.youtube.com/embed/fusPcwBqxOk" 
           title="YouTube video player" frameborder="0" 
@@ -533,12 +533,12 @@
       <!-- ---------------------------------------------------------------------------------------------------------------------------- -->
       <!-- Back Hills: Leaderboard -->
       <div class="begin-section" id="back-hills">
-        <p class="section-title" id="back-hills-title">
+        <h1 class="section-title" id="back-hills-title">
           Back Hills
-        </p>
-        <p class="section-subtitle">
+        </h1>
+        <h2 class="section-subtitle">
           Leaderboard for Raceday 2023
-        </p>
+        </h2>
       </div>
 
       <div class="leaderboard">
@@ -549,7 +549,7 @@
         
         <!-- Men's Races -->
         <div class="times-by-division">
-          <p class="division-name">Men's Races</p>
+          <h3 class="division-name">Men's Races</h3>
 
           <div class="display-rankings">
             <p class="place-won">1st</p>
@@ -590,7 +590,7 @@
 
         <!-- Women's Races -->
         <div class="times-by-division">
-          <p class="division-name">Women's Races</p>
+          <h3 class="division-name">Women's Races</h3>
 
           <div class="display-rankings">
             <p class="place-won">1st</p>
@@ -631,7 +631,7 @@
 
         <!-- All Gender Races -->
         <div class="times-by-division">
-          <p class="division-name">All Gender Races</p>
+          <h3 class="division-name">All Gender Races</h3>
 
           <div class="display-rankings">
             <p class="place-won">1st</p>
