Made sure that featured teams link to new tabs

--- a/buggy.html
+++ b/buggy.html
@@ -258,7 +258,7 @@
               class="team-logo">
             <h3 class="team-name">Apex Buggy</h3>
             <p class="img-caption">Founded: 2011</p>
-            <a href="https://tartanconnect.cmu.edu/apex/home/">
+            <a href="https://tartanconnect.cmu.edu/apex/home/" target="_blank">
               <button class="visit-team">Visit Their Website!</button>
             </a>
           </div> 
@@ -277,7 +277,7 @@
               class="team-logo">
             <h3 class="team-name">Atlas</h3>
             <p class="img-caption">Founded: 2015</p>
-            <a href="https://atlasbuggy.github.io/">
+            <a href="https://atlasbuggy.github.io/" target="_blank">
               <button class="visit-team">Visit Their Website!</button>
             </a>
           </div> 
@@ -296,7 +296,7 @@
               class="team-logo">
             <h3 class="team-name">Carnegie Involvement Association (CIA)</h3>
             <p class="img-caption">Founded: 1970</p>
-            <a href="http://ciabuggy.org/">
+            <a href="http://ciabuggy.org/" target="_blank">
               <button class="visit-team">Visit Their Website!</button>
             </a>
           </div> 
@@ -315,7 +315,7 @@
               class="team-logo">
             <h3 class="team-name">Delta Gamma Racing (DG)</h3>
             <p class="img-caption">Founded: 2022</p>
-            <a href="https://cmu.deltagamma.org/">
+            <a href="https://cmu.deltagamma.org/" target="_blank">
               <button class="visit-team">Visit Their Website!</button>
             </a>
           </div> 
@@ -334,7 +334,7 @@
               class="team-logo">
             <h3 class="team-name">Fringe</h3>
             <p class="img-caption">Founded: 1969</p>
-            <a href="http://fringe.org/">
+            <a href="http://fringe.org/" target="_blank">
               <button class="visit-team">Visit Their Website!</button>
             </a>
           </div> 
@@ -353,7 +353,7 @@
               class="team-logo">
             <h3 class="team-name">Pi Kappa Alpha</h3>
             <p class="img-caption">Founded: 1921</p>
-            <a href="https://cmupikes.org/pika-buggy">
+            <a href="https://cmupikes.org/pika-buggy" target="_blank">
               <button class="visit-team">Visit Their Website!</button>
             </a>
           </div> 
@@ -372,7 +372,7 @@
               class="team-logo">
             <h3 class="team-name">Robobuggy</h3>
             <p class="img-caption">Founded: 2000</p>
-            <a href="https://roboticsclub.org/projects/robobuggy/">
+            <a href="https://roboticsclub.org/projects/robobuggy/" target="_blank">
               <button class="visit-team">Visit Their Website!</button>
             </a>
           </div> 
@@ -391,7 +391,7 @@
               class="team-logo">
             <h3 class="team-name">Student Dormitory Council (SDC)</h3>
             <p class="img-caption">Founded: 1974</p>
-            <a href="http://sdcbuggy.org/">
+            <a href="https://tartanconnect.cmu.edu/sdc/home/" target="_blank">
               <button class="visit-team">Visit Their Website!</button>
             </a>
           </div> 
@@ -410,7 +410,7 @@
               class="team-logo">
             <h3 class="team-name">Sigma Phi Epsilon</h3>
             <p class="img-caption">Founded: 1998</p>
-            <a href="https://www.sigep.fun/">
+            <a href="https://www.sigep.fun/" target="_blank">
               <button class="visit-team">Visit Their Website!</button>
             </a>
           </div> 
@@ -429,7 +429,7 @@
               class="team-logo">
             <h3 class="team-name">Sigma Nu</h3>
             <p class="img-caption">Founded: 1916</p>
-            <a href="https://www.instagram.com/sigmanucmu/?hl=en">
+            <a href="https://www.instagram.com/sigmanucmu/?hl=en" target="_blank">
               <button class="visit-team">Visit Their Website!</button>
             </a>
           </div> 
@@ -448,7 +448,7 @@
               class="team-logo">
             <h3 class="team-name">SPIRIT Racing Systems</h3>
             <p class="img-caption">Founded: 1985</p>
-            <a href="https://www.spiritracingsystems.com/">
+            <a href="https://www.spiritracingsystems.com/" target="_blank">
               <button class="visit-team">Visit Their Website!</button>
             </a>
           </div> 
