--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div id="map-view">
         <div id="map-with-checkpoints">
-          <img src="./assets/pui buggy course.svg"
+          <img src="./assets/pui buggy course updated.svg"
             alt="Simplified Diagram of Buggy Racecourse"
             id="course-img">
           
